2002-08-27  Richard Williamson (Local)  <rjw@apple.com>

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView mouseDown:]):
        (-[WebHTMLView mouseDragged:]):
        (-[WebHTMLView mouseMovedNotification:]):
        * WebView.subproj/WebHTMLViewPrivate.h:
        * WebView.subproj/WebHTMLViewPrivate.m:

        Fixed active link style.  Cleaned up and fixed drag initiation
        for links and images.  Dotted lines not drawing correcly, but
        other styles are applied correctly.
        
        * WebKit.exp:
        * History.subproj/WebHistory.h:
        * History.subproj/WebHistory.m:
        
        Added some constants.

        * WebCoreSupport.subproj/WebTextRendererFactory.m:

        Code to change CG caching policy.  Not enabled until
        we receive a root from CG team.
        
2002-08-27  Darin Adler  <darin@apple.com>

	- fixed 3031583 -- directory.apple.com now gives "unsupported" redirect

        * WebView.subproj/WebDataSource.m: (-[WebDataSource initWithURL:attributes:flags:]):
	Don't create the resource handle here. It's a bit too early.
        * WebView.subproj/WebDataSourcePrivate.m: (-[WebDataSource _startLoading:]):
	Create the resource handle here, now that we have a controller to get a user agent from.

        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handleWillUseUserAgent:forURL:]): Add an assert that will catch
	any future problems of this kind.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge defersLoading]): Added. New call for use in WebCore.
        (-[WebBridge setDefersLoading:]): Added. New call for use in WebCore.

2002-08-26  Darin Adler  <darin@apple.com>

	Add machinery for deferring callbacks. Not used yet.

        * WebView.subproj/WebControllerPrivate.h: Add methods.
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _defersCallbacks]): Returns old state.